[package]
name = "ascii_depth_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ascii_depth_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
